--- a/clojure.org
+++ b/clojure.org
@@ -539,3 +539,23 @@ target/
 
 ;; (transform [ALL] inc [[1 2 3] [4 5 6]])
 #+END_SRC
+* postmodern - logging
+
+#+BEGIN_SRC clojure
+  ;; deps.edn
+  postmortem {:mvn/version "0.2.0"}
+
+  ;; require
+  (:require [postmortem.core :as pm]
+            [postmortem.xforms :as xf])
+#+END_SRC
+
+#+BEGIN_SRC clojure
+  (defn abc [x y]
+    (pm/dump :abc-log (xf/take-last 2))
+    (+ x y))
+
+  (abc 1 2)
+
+  (pm/log-for :abc-log)
+#+END_SRC
