--- a/emacs.org
+++ b/emacs.org
@@ -1375,3 +1375,25 @@ X	evil-org-delete-previous-char	like X but keep tables and tags aligned
 | C-c C-c                    | save changes                               |
 |----------------------------+--------------------------------------------|
 
+* clomacs
+running clojure from elisp and vice versa
+
+** To call clojure from elisp
+
+In you elisp code do:
+
+#+BEGIN_SRC elisp
+  (clomacs-defun this-calls-cloj-fn
+                 my-ns.core/the-clj-fn)
+#+END_SRC
+
+This creates an elisp function called `this-calls-cloj-fn`, which we
+can call from any elisp code now.  The clojure code in the file
+
+: <project>/src/my_ns/core.clj
+
+should be loaded via cider and have a function called `the-clj-fn`.
+
+** get output of clojure function into emacs buffer
+
+we just change
