--- a/emacs.org
+++ b/emacs.org
@@ -1208,7 +1208,6 @@ for one doc at a time (blech!). :(
     A-x info RET
     C-h i
 
-
 * Org Mode
 ** Common
 
@@ -1392,3 +1391,4 @@ or
 
 : /ssh:root@archlinux:/
 
+* Ediff
