--- a/machine_learning.org
+++ b/machine_learning.org
@@ -16,6 +16,43 @@ full with an tgz extraction?
 ** Dragan Rocks
 
 ** 7 Gate
+*** pre-start links
+[[https://www.youtube.com/playlist?list=PLAwxTw4SYaPl0N6-e1GvyLp5-MUMUjOKo
+][youtube 1]]
+[[https://www.youtube.com/playlist?list=PLAwxTw4SYaPl0N6-e1GvyLp5-MUMUjOKo
+][youtube 2 - first 18 videos]]
+
+The Harvard CS109 class of 2015 has [[https://cs109.github.io/2015/pages/videos.html][hands-on examples]] of the above
+concepts. Work on things you may have not fully grasped with the below
+material
+
+
+The following sessions address the general tooling such as using the command line,
+Python (NumPy, Matplotlib, Pandas, Seaborn), Jupyter Notebooks, Git (and GitHub),
+and sending HTTP requests. You must be comfortable with these before attending
+the classes. The following sessions may assist that:
+
+a. [[https://matterhorn.dce.harvard.edu/engage/player/watch.html?id=e15f221c-5275-4f7f-b486-759a7d483bc8][Lab1 about Jupyter and Git]] 
+
+(Note that Jupyter Notebook has evolved into
+Jupyter Lab since the sessions were recorded and we will be using the latter
+in the class. [[https://nbviewer.jupyter.org/github/johannesgiorgis/school_of_ai_vancouver/blob/master/intro_to_data_science_tools/01_introduction_to_conda_and_jupyter_notebooks.ipynb][A more updated introductory source is available here]])
+
+b. [[https://matterhorn.dce.harvard.edu/engage/player/watch.html?id=f7ff1893-fbf7-4909-b44e-12e61a98a677][Lecture 2 for Pandas]] (scraping part optional)
+
+c. [[https://matterhorn.dce.harvard.edu/engage/player/watch.html?id=f8a832cb-56e7-401b-b485-aec3c9928069][Lecture 4 Databases]]
+
+2. The following sessions are concept refreshers on cohort prerequisites:
+
+a. [[https://matterhorn.dce.harvard.edu/engage/player/watch.html?id=8af4418a-7f5b-4738-9c72-6fc2ba1fc499][Lab 3: Probability and distributions]]
+
+b. [[https://matterhorn.dce.harvard.edu/engage/player/watch.html?id=afe70053-b8b7-43d3-9c2f-f482f479baf7][Lecture 7: Bias]]
+
+c. Lab 4 on Regression [[https://matterhorn.dce.harvard.edu/engage/player/watch.html?id=483c8b93-3700-4ee8-80ed-aad7f3da7ac2][video]] and [[https://github.com/cs109/2015lab][notebook]]
+
+Step 3: Data Science Presentations
+Study [[https://drive.google.com/drive/folders/1e3OYZn_0VAGLEClJYJZ0OoJvy6Qj-dsi][academy’s pre-course presentations]] and make sure you search online for any
+concepts that you are not familiar with.
 
 * Notes
 
