--- a/machine_learning.org
+++ b/machine_learning.org
@@ -9,13 +9,58 @@ https://neanderthal.uncomplicate.org/articles/getting_started.html
 The non-slim variety of above dies, maybe because /tmp 4g drive got
 full with an tgz extraction?
 
+dont know about following:
+
 : yaourt intel-opencl-sdk
+
+** GPU
+
+https://wiki.archlinux.org/index.php/GPGPU
+
+dell desktop:
+
+: yaourt intel-opencl-runtime
+
+samsung laptop:
+
+pacman -S beignet
 
 * Learning
 
-** Dragan Rocks
+* Dragan Rocks
 
-** 7 Gate
+https://dragan.rocks/
+
+** tutorial - Fast, Native Speed, Vector Computations in Clojure
+
+https://neanderthal.uncomplicate.org/articles/tutorial_native.html
+
+** functions
+*** uncomplicate.neanderthal.native
+    
+dge rows columns
+Creates a GE matrix using double precision floating point native CPU engine
+
+dv
+Creates a vector using double precision floating point native CPU engine
+
+*** uncomplicate.neanderthal.core
+mv! - Matrix-Vector multiplication
+(mv! t (col a i) y)
+Multiplies matrix t, by vector (col a i), and adds it to vector y.
+
+mm! - matrix-matrix multiplication
+(mm! t a b)
+Multiply matrix a by b.  Scale by t.
+
+ncols
+Returns the number of columns of the matrix `a`.
+
+mrows
+Returns the number of rows of the matrix `a`.
+
+
+* 7 Gate
 *** pre-start links
 [[https://www.youtube.com/playlist?list=PLAwxTw4SYaPl0N6-e1GvyLp5-MUMUjOKo
 ][youtube 1]]
@@ -25,7 +70,6 @@ full with an tgz extraction?
 The Harvard CS109 class of 2015 has [[https://cs109.github.io/2015/pages/videos.html][hands-on examples]] of the above
 concepts. Work on things you may have not fully grasped with the below
 material
-
 
 The following sessions address the general tooling such as using the command line,
 Python (NumPy, Matplotlib, Pandas, Seaborn), Jupyter Notebooks, Git (and GitHub),
@@ -54,7 +98,7 @@ Step 3: Data Science Presentations
 Study [[https://drive.google.com/drive/folders/1e3OYZn_0VAGLEClJYJZ0OoJvy6Qj-dsi][academy’s pre-course presentations]] and make sure you search online for any
 concepts that you are not familiar with.
 
-* Notes
+* ML Notes
 
 ** Linear Regression - AKA least squares
 
