--- a/machine_learning.org
+++ b/machine_learning.org
@@ -94,6 +94,20 @@ in the class.
 *** TODO Step 3: Data Science Presentations
 Study [[https://drive.google.com/drive/folders/1e3OYZn_0VAGLEClJYJZ0OoJvy6Qj-dsi][academy’s pre-course presentations]] and make sure you search online for any
 concepts that you are not familiar with.
+* jupyter, python, etc
+
+Start Jupyter Lab:
+
+: jupyter-lab 
+
+** python: numpy, matplotlib, pandas, seaborn
+
+#+BEGIN_SRC python
+import numpy as np
+import pandas as pd
+import matplotlib.pyplot as plt
+import seaborn as sns
+#+END_SRC
 
 * ML Notes
 
@@ -119,17 +133,8 @@ Retain the evaluation score and discard the model
 Summarize the skill of the model using the sample of model evaluation scores
 ** Bias 
 High bias means more error in your predictions.
-* jupyter, python, etc
 
-Start Jupyter Lab:
-
-: jupyter-lab 
-
-** python: numpy, matplotlib, pandas, seaborn
-
-#+BEGIN_SRC python
-import numpy as np
-import pandas as pd
-import matplotlib.pyplot as plt
-import seaborn as sns
-#+END_SRC
+** Inference
+For now, though, we are only dealing with inference, the process of
+computing the output using the given structure, input, and whatever
+weights there are.
