--- a/audacity.org
+++ b/audacity.org
@@ -1,3 +1,14 @@
+* Trim Clip
+
+Select with mouse.  Edit > Remove Special > Trim Audio
+
+Then there is an audio slider tool and you have to move the clip to
+the beginning.  Its a double left/right arrow.
+
+* Augment Volume
+
+Select region, Effects > Amplify
+
 * Remove noise from a recording.
 
 When recording you should allow some silence before and after the
