--- a/heroku.org
+++ b/heroku.org
@@ -1,13 +1,20 @@
+
 You push your code to heroku.  
+
+: git push heroku master 
 
 Heroku then builds your code.  Since we want it to build *.cljs files,
 we can supply our own ~bin/build~ executable script to run our desired
 commands.
 
-
 Heroku then launches the process, specified in it's ~Procfile~.
 
 The app specified in the Procfile is run on a ~Dyno~.
+
+
+* Explicitly set buildpack
+
+: heroku buildpacks:set heroku/clojure
 
 * CLJS buildpack 4 heroku
   
